# IDS721-Proj2-rust

./: Cargo.toml  Dockerfile  README.md  devcontainer.json
.github/workflows/: cd.yml
data/: dog_breeds.csv
src/: lib.rs  main.rs
templates/: index.html  recommend.html
tests/: test.rs
