[package]
name = "dog-recommendations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
csv = "1.1.6"
bincode = "1.3.3"
tera = "1.10.0"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
actix-identity = "0.5.2"